@@ -2,87 +2,99 @@ require File.dirname(__FILE__) + '/../../spec_helper'
 require 'controller_spec_controller'
 
 ['integration', 'isolation'].each do |mode|
-  describe "Given a controller spec for ControllerSpecController running in #{mode} mode", :behaviour_type => :controller do
+  describe "A controller example running in #{mode} mode", :behaviour_type => :controller do
     controller_name :controller_spec
     integrate_views if mode == 'integration'
   
-    it "session should be the same object as controller session" do
+    it "should provide controller.session as session" do
       get 'action_with_template'
       session.should equal(controller.session)
     end
   
-    it "session should be the same object before and after the action" do
+    it "should provide the same session object before and after the action" do
       session_before = session
       get 'action_with_template'
       session.should equal(session_before)
     end
   
-    it "controller.session should NOT be nil before the action" do
+    it "should ensure controller.session is NOT nil before the action" do
       controller.session.should_not be_nil
       get 'action_with_template'
     end
     
-    it "controller.session should NOT be nil after the action" do
+    it "should ensure controller.session is NOT nil after the action" do
       get 'action_with_template'
       controller.session.should_not be_nil
     end
     
-    it "specifying a partial should work with partial name only" do
+    it "should allow specifying a partial with partial name only" do
       get 'action_with_partial'
       response.should render_template("_partial")
     end
     
-    it "specifying a partial should work with with expect_render" do
+    it "should allow specifying a partial with expect_render" do
       controller.expect_render(:partial => "controller_spec/partial")
       get 'action_with_partial'
     end
     
-    it "specifying a partial should work with with expect_render with object" do
+    it "should allow specifying a partial with expect_render with object" do
       controller.expect_render(:partial => "controller_spec/partial", :object => "something")
       get 'action_with_partial_with_object', :thing => "something"
     end
     
-    it "specifying a partial should work with expect_render with locals" do
+    it "should allow specifying a partial with expect_render with locals" do
       controller.expect_render(:partial => "controller_spec/partial", :locals => {:thing => "something"})
       get 'action_with_partial_with_locals', :thing => "something"
     end
     
-    it "specifying a partial should work with path relative to RAILS_ROOT/app/views/" do
+    it "should allow a path relative to RAILS_ROOT/app/views/ when specifying a partial" do
       get 'action_with_partial'
       response.should render_template("controller_spec/_partial")
     end
     
-    it "spec should have access to flash" do
+    it "should provide access to flash" do
       get 'action_with_template'
       flash[:flash_key].should == "flash value"
     end
     
-    it "spec should have access to flash values set after a session reset" do
+    it "should provide access to flash values set after a session reset" do
       get 'action_setting_flash_after_session_reset'
       flash[:after_reset].should == "available"
     end
     
-    it "spec should not have access to flash values set before a session reset" do
+    it "should not provide access to flash values set before a session reset" do
       get 'action_setting_flash_before_session_reset'
       flash[:before_reset].should_not == "available"
     end
 
-    it "spec should have access to session" do
+    it "should provide access to session" do
       get 'action_with_template'
       session[:session_key].should == "session value"
     end
 
-    it "custom routes should be speccable" do
+    it "should support custom routes" do
       route_for(:controller => "custom_route_spec", :action => "custom_route").should == "/custom_route"
     end
 
-    it "routes should be speccable" do
+    it "should support existing routes" do
       route_for(:controller => "controller_spec", :action => "some_action").should == "/controller_spec/some_action"
     end
 
-    it "exposes the assigns hash directly" do
+    it "should expose the assigns hash directly" do
       get 'action_setting_the_assigns_hash'
       assigns[:direct_assigns_key].should == :direct_assigns_key_value
+    end
+    
+    it "should complain when calling should_receive(:render) on the controller" do
+      lambda {
+        controller.should_receive(:render)
+      }.should raise_error(RuntimeError, /should_receive\(:render\) has been disabled/)
+    end
+
+    it "should complain when calling stub!(:render) on the controller" do
+      lambda {
+        controller.stub!(:render)
+      }.should raise_error(RuntimeError, /stub!\(:render\) has been disabled/)
     end
   end
 
